<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <!--Inicia  Actividad-->
    <LinearLayout
        android:id="@+id/nombre_actividad"
        style="@style/EditHabitNameForm"
        android:paddingTop="@dimen/editar_actividad_padding">

        <TextView
            android:id="@+id/textView"
            style="@style/EditLabelStyle"
            android:layout_weight="2.5"
            android:text="@string/realizar" />

        <EditText
            style="@style/EditTextStyle"
            android:layout_weight="4"
            android:id="@+id/edit_actividad"
            android:hint="@string/nombre_actividad" >
            <requestFocus/>

        </EditText>

    </LinearLayout>

    <!-- Termina Actividad -->

    <LinearLayout

        android:id="@+id/contenedor_tarea_terminada"
        style="@style/EditLinearStyle"
        android:paddingTop="@dimen/editar_actividad_padding">

        <CheckBox
            android:id="@+id/tarea_terminada"
            android:hint="@string/tarea_completada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/contenedor_responsable"
        style="@style/EditHabitNameForm"
        android:layout_width="396dp"
        android:layout_height="73dp"
        android:paddingTop="@dimen/editar_actividad_padding">
        <EditText
            android:id="@+id/edit_responsable"
            style="@style/EditTextStyle"
            android:layout_weight="4"
            android:hint="@string/responsable"

            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/iv_creador"
            style="@style/FormInput"
            android:contentDescription="@string/icono_fecha"
            android:src="@drawable/ic_account_circle" />



    </LinearLayout>
    <!--Fecha de Inicio-->

    <LinearLayout
        android:id="@+id/contenedor_fecha_inicio"
        style="@style/EditHabitNameForm"
        android:paddingTop="@dimen/editar_actividad_padding">

        <TextView
            android:id="@+id/tv_fecha_inicio"
            android:layout_weight="2.5"
            style="@style/EditLabelStyle"
            android:text="@string/fechainicio" />

        <EditText
            android:id="@+id/edit_fecha_inicio"
            android:layout_weight="4"
            android:inputType="datetime"
            android:hint="@string/fecha_sin_fijar"
            style="@style/EditTextStyle" />

        <ImageButton
            android:id="@+id/btnFechaInicio"
            style="@style/FormInput"
            android:contentDescription="@string/icono_fecha"
            android:src="@drawable/ic_event" />

    </LinearLayout>

    <!--Termina FechaInicio-->

    <!--Fecha Termino -->
    <LinearLayout
        android:id="@+id/contenedor_fecha_termino"
        style="@style/EditHabitNameForm"
        android:paddingTop="@dimen/editar_actividad_padding">

        <TextView
            android:id="@+id/tv_fecha_termino"
            android:layout_weight="2.5"
            style="@style/EditLabelStyle"
            android:text="@string/fechatermino" />


        <EditText
            android:id="@+id/edit_fecha_termino"
            android:layout_weight="4"
            android:hint="@string/fecha_sin_fijar"
            android:inputType="datetime"
            style="@style/EditTextStyle" />

        <ImageButton
            android:id="@+id/btnfecha_termino"
            style="@style/FormInput"
            android:contentDescription="@string/icono_fecha"
            android:src="@drawable/ic_event" />


    </LinearLayout>
    <!-- Termina Fecha Termino -->

    <LinearLayout
        android:id="@+id/container_reminder"
        style="@style/EditHabitNameForm"
        android:paddingTop="@dimen/editar_actividad_padding">

        <TextView
            style="@style/EditLabelStyle"
            android:text="@string/recordatorio" />

        <TextView
            android:id="@+id/tv_reminder_time"
            style="@style/ReminderTextView" />
    </LinearLayout>




</LinearLayout>