<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_creador_actividad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/texto_creador"
            android:textColor="#111"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_fecha_inicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fecha_inicio"
            android:textColor="#aaa"
            android:textSize="12sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/titulo_actividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#aaa"
        android:lineSpacingExtra="6dp"
        android:maxLines="3"
        android:text="@string/actividad"
        android:textSize="12sp" />

    </LinearLayout>