<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/widget_card_click_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:clickable="true">

        <TextView
            android:id="@+id/widget_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/fecha_inicio"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/widget_card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/widget_card_date"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:text="@string/actividad"
            android:textColor="@color/primary_text"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_creador_actividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/widget_card_text"
            android:gravity="center_vertical|start"
            android:textColor="@color/primary_text"
            android:text="@string/texto_creador"
            android:textSize="12sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/widget_card_click_star"
        android:clickable="true"
        android:background="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:textIsSelectable="false"
            android:id="@+id/widget_card_time"
            android:textSize="12sp"
            android:text="14:20"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/widget_card_star"
            android:contentDescription="@string/accion_aceptar"
            android:src="@drawable/ic_done"
            android:layout_below="@id/widget_card_time"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter" />
    </RelativeLayout>

</LinearLayout>